fixed spacing in nav

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
 
 .nav, h1 {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   gap: 1rem;
   margin: 0;
   padding: 20px;
